sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: not found: value setValeurs
        setValeurs(j+1,getValeur(j))
        ^